--- a/src/pages/naujienos.html
+++ b/src/pages/naujienos.html
@@ -121,7 +121,7 @@
 
                 <ul class="left">
                   <div id="dropdownMenu" class="left-top">
-                      <span>Visos naujienos: </span>
+                      <p>Visos naujienos: </p>
                       <svg xmlns="http://www.w3.org/2000/svg" width="13" height="9" viewBox="0 0 13 9" fill="none">
                       <path d="M6.5 9L0.00480915 0.75L12.9952 0.750001L6.5 9Z" fill="#004A4E"/>
                       </svg>
